--- a/src/localization_ndt/package.xml
+++ b/src/localization_ndt/package.xml
@@ -18,6 +18,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2</build_depend>
+  <build_depend>roslib</build_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
@@ -28,6 +29,7 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2</exec_depend>
+  <exec_depend>roslib</exec_depend>
   
   <export/>
 </package>
